[package]
name = "seisvelas-rss"
version = "0.1.0"
authors = ["David Calavera <david.calavera@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlify_lambda_http = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
